# dispatch

./: CMakeLists.txt
.github/workflows/: build.yml
include/avakar/: dispatch.h
test/: test.cpp
